--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,7 +35,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         // applicationId "www.sliceapp.fr.sliceapp"
-        // minSdkVersion 18
+        // minSdkVersion 19
         // targetSdkVersion 28
         // versionCode flutterVersionCode.toInteger()
         // versionName flutterVersionName
@@ -43,13 +43,14 @@ android {
         //         'appAuthRedirectScheme': 'com.auth0.flutterdemo'
         // ]
         applicationId "com.auth0.flutterdemo"
-        minSdkVersion 18
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         manifestPlaceholders = [
                 'appAuthRedirectScheme': 'com.auth0.flutterdemo'
         ]
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -67,4 +68,5 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:multidex:2.0.1'
 }
